# sed

./: .gitignore  Cargo.toml  README.md  REVIT_PLUGIN.md  SCHEMA.md  SCHEMA_v0.2.sql  SCHEMA_v0.3.sql  SPECIFICATION.md  demo.html  office-level2.html  skims-level2.html  test_viewer.html
crates/sed-cli/: Cargo.toml
crates/sed-cli/src/: export.rs  html_export.rs  main.rs
crates/sed-sdk/: Cargo.toml  test_import.csv
crates/sed-sdk/src/: autosize.rs  bug_tests.rs  catalog.rs  clipboard.rs  design_check.rs  diff.rs  document.rs  examples.rs  examples_office.rs  geometry.rs  import.rs  lib.rs  markup.rs  nlq.rs  pipe_size.rs  query.rs  report.rs  schema.rs  suggest.rs  tests.rs  types.rs  undo.rs  validate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: test.html
