[workspace]
resolver = "2"
members = [
    "crates/sed-sdk",
    "crates/sed-cli",
    "src-tauri",
]

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
printpdf = "0.7"
csv = "1"
