[package]
name = "sed-editor"
version = "0.1.0"
description = "SED Editor — Structured Engineering Document"
authors = []
edition = "2021"

[lib]
name = "sed_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
sed-sdk = { path = "../crates/sed-sdk" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
anyhow = "1"
