[package]
name = "sed-sdk"
version = "0.1.0"
edition = "2021"
description = "Structured Engineering Document — core SDK"

[dependencies]
rusqlite = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
